<resources>
    <string name="app_name">Вектор развития</string>
    <string name="drawer_item_calendar">Календарь</string>
    <string name="drawer_item_development_diary">Дневник развития</string>
    <string name="drawer_item_exercises">Занятия</string>
    <string name="drawer_item_medical_data">Медицинские данные</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_help">Помощь</string>
    <string name="profile">Профиль</string>
    <string name="add_profile">Добавить профиль</string>
    <string name="edit">Редактировать</string>
    <string name="delete_child">Удалить профиль</string>
    <string name="delete_child_confirmation_dialog_title">Удалить профиль %s?</string>
    <string name="delete_child_confirmation_dialog_text">Все данные профиля будут удалены без возможности восстановления.</string>
    <string name="add">Добавить</string>
    <string name="sex">Пол</string>
    <string name="child_name">Имя ребенка</string>
    <string name="birth_date_and_time">Дата и время рождения</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="birth_height_and_weight">Рост и вес при рождении</string>
    <string name="enter_height">Введите рост</string>
    <string name="enter_weight">Введите вес</string>
    <string name="add_image_button_title">Добавить\nфото</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="request_read_external_storage_permission_title">Запрос на чтение SD-карты</string>
    <string name="request_read_external_storage_permission_text">Необходимо для чтения файлов с SD-карты.</string>
    <string name="request_get_accounts_permission_title">Запрос на получение аккаунта</string>
    <string name="request_get_accounts_permission_text">Необходимо для создания резервной копии данных приложения в Google Drive.</string>
    <string name="camera_not_available">Камера не доступна</string>
    <string name="select_image">Выберите изображение</string>
    <string name="failed_to_create_file_for_camera">Не удалось создать файл для фотографии</string>
    <string name="failed_to_create_file_for_crop">Не удалось создать файл для обработки</string>
    <string name="failed_to_select_image">Не удалось загрузить выбранное изображение</string>
    <string name="failed_to_crop_image">При обработке изобарженяия произошла ошибка</string>
    <string name="failed_to_save_result_file">При сохранении файла произошла ошибка</string>
    <string name="crop_image_title">Обрезать фото</string>
    <string name="event_diaper">Смена подгузника</string>
    <string name="event_sleep">Сон</string>
    <string name="event_feed">Кормление</string>
    <string name="event_pump">Сцеживание</string>
    <string name="event_other">Другое</string>
    <string name="event_doctor_visit">Визит к врачу</string>
    <string name="event_medicine_taking">Прием лекарств</string>
    <string name="validate_child_name_empty">Введите имя ребенка</string>
    <string name="validate_child_sex_empty">Выберите пол ребенка</string>
    <string name="validate_child_birth_date_empty">Введите дату рождения ребенка</string>
    <string name="validate_child_birth_height_empty">Введите рост ребенка при рождении</string>
    <string name="validate_child_birth_weight_empty">Введите вес ребенка при рождении</string>
    <string name="validate_event_feed_breast_milk_fill_left_duration">Введите продолжительность кормления для левой груди</string>
    <string name="validate_event_feed_breast_milk_fill_right_duration">Введите продолжительность кормления для правой груди</string>
    <string name="validate_event_pump_fill_left_amount">Введите количество сцеженного молока для левой груди</string>
    <string name="validate_event_pump_fill_right_amount">Введите количество сцеженного молока для правой груди</string>
    <string name="validate_event_sleep_timer_already_started">Таймер сна уже запущен</string>
    <string name="validate_event_other_title_empty">Введите название события</string>
    <string name="validate_start_finish_time">Время окончания не может быть меньше, чем время начала события</string>
    <string name="validate_doctor_visit_name_empty">Введите название визита</string>
    <string name="validate_concrete_exercise_name_empty">Введите название занятия</string>
    <string name="validate_doctor_visit_doctor_empty">Выберите специализацию врача</string>
    <string name="validate_medicine_taking_medicine_empty">Выберите лекарство</string>
    <string name="validate_repeat_parameters_periodicity_empty">Выберите периодичность</string>
    <string name="validate_repeat_parameters_length_empty">Введите длительность</string>
    <string name="height_review">%s см</string>
    <string name="weight_review">%s кг</string>
    <string name="amount_review">%s мл</string>
    <string name="newborn">новорождённый</string>
    <string name="years_and_months">%1$s %2$s</string>
    <string name="select_sex">Выберите пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="action_capture_image">Сделать снимок</string>
    <string name="action_pick_image">Из галереи</string>
    <string name="action_delete_image">Удалить фото</string>
    <string name="empty" />
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="calendar_month_title">%1$s %2$d</string>
    <string name="calendar_week_title_one_month">%1$d \u2014 %2$d %3$s</string>
    <string name="calendar_week_title_two_month">%1$d %2$s \u2014 %3$d %4$s</string>
    <string name="calendar_selected_date_format">%1$d %2$s</string>
    <string name="breast_left">Левая</string>
    <string name="breast_right">Правая</string>
    <string name="diaper_state_dirty">Грязный</string>
    <string name="diaper_state_dry">Сухой</string>
    <string name="diaper_state_mixed">Смешанный</string>
    <string name="diaper_state_wet">Мокрый</string>
    <string name="feed_type_breast_milk">Грудь</string>
    <string name="feed_type_pumped_milk">Сцеженное</string>
    <string name="feed_type_milk_formula">Смесь</string>
    <string name="feed_type_food">Прикорм</string>
    <string name="food_measure_other">Другое</string>
    <string name="food_other">Другое</string>
    <string name="notify_time">Оповещение</string>
    <string name="diaper_state">Состояние подгузника</string>
    <string name="note">Примечание</string>
    <string name="asleep">Уснул</string>
    <string name="awoke">Проснулся</string>
    <string name="feed_type">Тип кормления</string>
    <string name="duration">Продолжительность</string>
    <string name="breast">Грудь</string>
    <string name="amount">Количество</string>
    <string-array name="food_measure">
        <item>граммы</item>
        <item>миллилитры</item>
    </string-array>
    <string name="other_event_start">Начало</string>
    <string name="other_event_finish">Конец</string>
    <string name="notify_time_dialog_title">Оповещение за</string>
    <string name="notify_time_text">За %s</string>
    <string name="no_value">Нет</string>
    <string name="time_dialog_days">Дней</string>
    <string name="time_dialog_hours">Часов</string>
    <string name="time_dialog_minutes">Минут</string>
    <string name="food_measure_dialog_title">Введите единицу измерения</string>
    <string name="food_dialog_title">Введите наименование прикорма</string>
    <string name="duration_separator">:</string>
    <string name="child_sleep">%s спит</string>
    <string name="sleep_timer">Таймер сна</string>
    <string name="will_start">запустится через %s</string>
    <string name="stop_sleep_timer">Остановить таймер сна</string>
    <string name="days_short">%d д.</string>
    <string-array name="medicine">
        <item>Активированный уголь</item>
        <item>Нурофен</item>
        <item>Ибупрофен</item>
        <item>Йод</item>
        <item>Смекта</item>
        <item>Мирамистин</item>
        <item>Альбуцид</item>
        <item>Фурацилин (таблетки)</item>
        <item>Фурацилиновый спирт</item>
        <item>Изофра</item>
        <item>Аквалор</item>
        <item>Флемоклав</item>
        <item>Амоксиклав</item>
        <item>Рибоксин</item>
        <item>Веторон</item>
        <item>Алмагель</item>
        <item>Креон</item>
        <item>Виброцил</item>
        <item>Називин</item>
        <item>Нафтизин</item>
        <item>Супрастин</item>
        <item>Фенистил (гель)</item>
        <item>Виферон (свечи)</item>
        <item>Парацетамол</item>
        <item>Эспумизан</item>
        <item>Линекс</item>
    </string-array>
    <string-array name="doctor">
        <item>ЛОР</item>
        <item>Аллерголог-иммунолог</item>
        <item>Аллерголог</item>
        <item>Андролог</item>
        <item>Аритмолог</item>
        <item>Вертебролог</item>
        <item>Вирусолог</item>
        <item>Гастроэнтеролог</item>
        <item>Гематолог</item>
        <item>Гепатолог</item>
        <item>Гинеколог-эндокринолог</item>
        <item>Гинеколог</item>
        <item>Гомеопат</item>
        <item>Дерматолог</item>
        <item>Зубной врач</item>
        <item>Иммунолог</item>
        <item>Инфекционист</item>
        <item>Кардиолог</item>
        <item>Кардиоревматолог</item>
        <item>Косметолог</item>
        <item>Логопед</item>
        <item>Маммолог</item>
        <item>Массажист</item>
        <item>Миколог</item>
        <item>Невролог</item>
        <item>Невропатолог</item>
        <item>Нейрохирург</item>
        <item>Нефролог</item>
        <item>Окулист</item>
        <item>Онколог</item>
        <item>Ортопед-травматолог</item>
        <item>Ортопед</item>
        <item>Остеопат</item>
        <item>Офтальмолог</item>
        <item>Паразитолог</item>
        <item>Проктолог</item>
        <item>Психиатр</item>
        <item>Психолог</item>
        <item>Психотерапевт</item>
        <item>Пульмонолог</item>
        <item>Ревматолог</item>
        <item>Рефлексотерапевт</item>
        <item>Сосудистый хирург</item>
        <item>Стоматолог-хирург</item>
        <item>Стоматолог</item>
        <item>Сурдолог</item>
        <item>Травматолог</item>
        <item>Уролог</item>
        <item>Физиотерапевт</item>
        <item>Флеболог</item>
        <item>Фониатр</item>
        <item>Фтизиатр</item>
        <item>Хирург-ортопед</item>
        <item>Хирург-уролог</item>
        <item>Хирург</item>
        <item>Эндокринолог</item>
        <item>Эпилептолог</item>
        <item>Неонатолог</item>
        <item>Педиатр-неонатолог</item>
        <item>Педиатр</item>
        <item>Перинатолог</item>
        <item>Сурдопедагог</item>
        <item>Фтизиопедиатр</item>
    </string-array>
    <string name="filter_by_date">По периоду</string>
    <string name="filter_by_doctor">По специализации</string>
    <string name="filter_by_medicine">По лекарству</string>
    <string name="cloud_text">Сохраните свои данные с Google Drive</string>
    <string name="cloud_login_text">Войдите в аккаунт Google Drive</string>
    <string name="cloud_backup_text">Настройте синхронизацию</string>
    <string name="cloud_restore_text">Восстанавливайте данные на любом устройстве</string>
    <string name="bind_account">Привязать аккаунт</string>
    <string name="later">Позже</string>
    <string name="authorize">Войти</string>
    <string name="authorize_account">Войти в аккаунт</string>
    <string name="restore">Восстановить</string>
    <string name="restore_data">Восстановить данные</string>
    <string name="authorize_account_to_restore_data">Для восстановления данных необходимо авторизоваться в Google Drive</string>
    <string name="restore_data_placeholder">Данные будут восстанавливаться в течение некоторого времени, далее можно продолжить работу</string>
</resources>