<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_diaper"
        android:title="@string/event_diaper"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sleep"
        android:title="@string/event_sleep"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_feed"
        android:title="@string/event_feed"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_pump"
        android:title="@string/event_pump"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_other"
        android:title="@string/event_other"
        app:showAsAction="never" />
</menu>
