<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/filter_medical_dialog_width">

    <LinearLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/request_focus_view_dummy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:layout_marginTop="@dimen/profile_margin_vertical"
            android:text="@string/filter_by_date"
            android:textAppearance="@style/FilterPlaceholderTextAppearance" />

        <ru.android.childdiary.presentation.core.fields.widgets.FieldDateFilterView
            android:id="@+id/dateFromView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ru.android.childdiary.presentation.core.fields.widgets.FieldDateFilterView
            android:id="@+id/dateToView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/delimiter_margin" />

        <include layout="@layout/delimiter" />

        <TextView
            android:id="@+id/textViewByDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:layout_marginTop="@dimen/profile_margin_vertical"
            android:text="@string/filter_by_doctor"
            android:textAppearance="@style/FilterPlaceholderTextAppearance" />

        <ru.android.childdiary.presentation.medical.filter.visits.DoctorTokenCompleteTextView
            android:id="@+id/doctorAutoCompleteTextView"
            style="@style/AutoCompleteTextViewStyle"
            android:hint="@string/doctor" />

        <TextView
            android:id="@+id/textViewByMedicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:layout_marginTop="@dimen/profile_margin_vertical"
            android:text="@string/filter_by_medicine"
            android:textAppearance="@style/FilterPlaceholderTextAppearance" />

        <ru.android.childdiary.presentation.medical.filter.medicines.MedicineTokenCompleteTextView
            android:id="@+id/medicineAutoCompleteTextView"
            style="@style/AutoCompleteTextViewStyle"
            android:hint="@string/medicine" />
    </LinearLayout>
</ScrollView>
