<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/base_margin"
            android:paddingTop="@dimen/base_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/splash_margin_base_horizontal"
                android:layout_marginRight="@dimen/splash_margin_base_horizontal"
                android:gravity="center"
                android:text="@string/cloud_text"
                android:textAppearance="@style/CloudLargeTextAppearance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/splash_margin_base_horizontal"
                android:layout_marginRight="@dimen/splash_margin_base_horizontal"
                android:layout_marginTop="@dimen/splash_margin_base_vertical"
                android:drawableLeft="@drawable/ic_cloud_login"
                android:drawablePadding="@dimen/splash_drawable_padding"
                android:drawableStart="@drawable/ic_cloud_login"
                android:gravity="center_vertical"
                android:text="@string/cloud_login_text"
                android:textAppearance="@style/CloudTextAppearance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/splash_margin_base_horizontal"
                android:layout_marginRight="@dimen/splash_margin_base_horizontal"
                android:layout_marginTop="@dimen/splash_margin_base_vertical"
                android:drawableLeft="@drawable/ic_cloud_backup"
                android:drawablePadding="@dimen/splash_drawable_padding"
                android:drawableStart="@drawable/ic_cloud_backup"
                android:gravity="center_vertical"
                android:text="@string/cloud_backup_text"
                android:textAppearance="@style/CloudTextAppearance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/splash_margin_base_horizontal"
                android:layout_marginRight="@dimen/splash_margin_base_horizontal"
                android:layout_marginTop="@dimen/splash_margin_base_vertical"
                android:drawableLeft="@drawable/ic_cloud_restore"
                android:drawablePadding="@dimen/splash_drawable_padding"
                android:drawableStart="@drawable/ic_cloud_restore"
                android:gravity="center_vertical"
                android:text="@string/cloud_restore_text"
                android:textAppearance="@style/CloudTextAppearance" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLater"
            style="@style/BorderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/later" />

        <Button
            android:id="@+id/buttonBindAccount"
            style="@style/BorderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bind_account" />
    </LinearLayout>
</LinearLayout>
