<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/filter_dialog_width">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/request_focus_view_dummy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/profile_margin_horizontal"
            android:layout_marginRight="@dimen/profile_margin_horizontal"
            android:layout_marginTop="@dimen/profile_margin_vertical"
            android:text="@string/filter_by_date"
            android:textAppearance="@style/FilterPlaceholderTextAppearance" />

        <include
            android:id="@+id/filter_by_date_from"
            layout="@layout/dialog_filter_by_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/filter_base_margin"
            android:layout_marginLeft="@dimen/filter_base_margin"
            android:layout_marginRight="@dimen/filter_base_margin"
            android:layout_marginStart="@dimen/filter_base_margin" />

        <include
            android:id="@+id/filter_by_date_to"
            layout="@layout/dialog_filter_by_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/filter_base_margin"
            android:layout_marginLeft="@dimen/filter_base_margin"
            android:layout_marginRight="@dimen/filter_base_margin"
            android:layout_marginStart="@dimen/filter_base_margin" />

        <TextView
            android:id="@+id/filter_by_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/profile_margin_horizontal"
            android:layout_marginRight="@dimen/profile_margin_horizontal"
            android:layout_marginTop="@dimen/profile_margin_vertical"
            android:text="@string/filter_by_medicine"
            android:textAppearance="@style/FilterPlaceholderTextAppearance" />

        <ru.android.childdiary.presentation.medical.filter.medicines.MedicineTokenCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/profile_margin_vertical"
            android:layout_marginLeft="@dimen/profile_margin_horizontal"
            android:layout_marginRight="@dimen/profile_margin_horizontal"
            android:layout_marginTop="@dimen/profile_margin_vertical"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/arrow_down_black"
            android:drawableRight="@drawable/arrow_down_black"
            android:hint="@string/medicine"
            android:paddingBottom="@dimen/name_edit_text_padding_bottom"
            android:textAppearance="@style/PrimaryTextAppearance"
            android:textColorHint="@color/placeholder_text"
            android:textCursorDrawable="@drawable/edit_text_cursor" />
    </LinearLayout>
</ScrollView>
